{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 151,
  "lineage": "88284479-067e-244e-68b9-ec0a60423e6e",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220999274774:security-group/sg-0e6de08bda6a5c8c1",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6de08bda6a5c8c1",
            "ingress": [],
            "name": "jcd",
            "name_prefix": null,
            "owner_id": "220999274774",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jcd"
            },
            "timeouts": null,
            "vpc_id": "vpc-6b5bfd11"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220999274774:security-group/sg-000990ad3e9b20a6f",
            "description": "nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000990ad3e9b20a6f",
            "ingress": [],
            "name": "jcd-node",
            "name_prefix": null,
            "owner_id": "220999274774",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jcd-node"
            },
            "timeouts": null,
            "vpc_id": "vpc-6b5bfd11"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-node-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-4207244786",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e6de08bda6a5c8c1",
            "self": false,
            "source_security_group_id": "sg-000990ad3e9b20a6f",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.cluster",
            "aws_security_group.node"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2960786384",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-000990ad3e9b20a6f",
            "self": false,
            "source_security_group_id": "sg-0e6de08bda6a5c8c1",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.cluster",
            "aws_security_group.node"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2676102090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-000990ad3e9b20a6f",
            "self": false,
            "source_security_group_id": "sg-000990ad3e9b20a6f",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.node"
          ]
        }
      ]
    }
  ]
}